5.6.0 base
\ls -a | grep -v "^\.git$" | grep -v "^\.$" | grep -v "^\.\.$" | xargs rm -rf
svn export --force
https://svn.code.sf.net/p/jedit/svn/jEdit/tags/jedit-5-6-0 .
git add -A