@@ -80,25 +80,21 @@ class JEditMode extends Mode
 	@Override
 	public Object getProperty(String key)
 	{
-
-		//if(jEdit.getBooleanProperty(prefix + "customSettings"))
-		//{
-			String prefix = "mode." + name + '.';
-			String property = jEdit.getProperty(prefix + key);
-			if(property != null)
+		String prefix = "mode." + name + '.';
+		String property = jEdit.getProperty(prefix + key);
+		if(property != null)
+		{
+			Object value;
+			try
 			{
-				Object value;
-				try
-				{
-					value = new Integer(property);
-				}
-				catch(NumberFormatException nf)
-				{
-					value = property;
-				}
-				return value;
+				value = Integer.valueOf(property);
 			}
-		//}
+			catch(NumberFormatException nf)
+			{
+				value = property;
+			}
+			return value;
+		}
 
 		Object value = props.get(key);
 		if(value != null)
@@ -109,7 +105,7 @@ class JEditMode extends Mode
 		{
 			try
 			{
-				return new Integer(global);
+				return Integer.valueOf(global);
 			}
 			catch(NumberFormatException nf)
 			{
